tests/idris2/reg019/expected
1/1: Building lazybug (lazybug.idr)
Error: While processing right hand side of main3. Can't infer delay type

lazybug.idr:11:34--11:41
    |
 11 | main3 = printLn $ or (map (\x => Delay x) bools)
    |                                  ^^^^^^^

Error: While processing right hand side of main'. Can't solve constraint between: Bool and Lazy Bool.

lazybug.idr:17:24--17:36
    |
 17 | main' = printLn $ or' (map id bools)
    |                        ^^^^^^^^^^^^

Error: While processing right hand side of main2'. Can't solve constraint between: Bool and Lazy Bool.

lazybug.idr:20:25--20:44
    |
 20 | main2' = printLn $ or' (map (\x => x) bools)
    |                         ^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of main4'. Can't solve constraint between: Bool and Lazy Bool.

lazybug.idr:26:24--26:29
    |
 26 | main4' = printLn $ or' bools
    |                        ^^^^^

